--- a/app.html
+++ b/app.html
@@ -40,13 +40,17 @@
                 <nav class="p-4">
                     <ul class="space-y-2">
                         <li><a href="#dashboard" class="block p-2 rounded hover:bg-gray-700">Dashboard</a></li>
-                        <li><a href="#students" class="block p-2 rounded hover:bg-gray-700">Students</a></li>
-                        <li><a href="#planes" class="block p-2 rounded hover:bg-gray-700">Planes</a></li>
-                        <li><a href="#bookings" class="block p-2 rounded hover:bg-gray-700">Bookings</a></li>
-                        <li><a href="#flight_logs" class="block p-2 rounded hover:bg-gray-700">Flight Logs</a></li>
-                        <li><a href="#instructors" class="block p-2 rounded hover:bg-gray-700">Instructors</a></li>
-                        <li><a href="#finances" class="block p-2 rounded hover:bg-gray-700">Finances</a></li>
-                        <li><a href="#submit_flight" class="block p-2 rounded hover:bg-gray-700">Submit Flight</a></li>
+                        <li><a href="#submit_flight" class="block p-2 rounded hover:bg-gray-700">+ Submit Flight</a>
+                        </li>
+                        <li><a href="#students" class="block p-2 rounded hover:bg-gray-700"> Students</a></li>
+                        <li><a href="#instructors" class="block p-2 rounded hover:bg-gray-700"> Instructors</a></li>
+                        <li><a href="#members" class="block p-2 rounded hover:bg-gray-700"> Members</a></li>
+                        <li><a href="#planes" class="block p-2 rounded hover:bg-gray-700"> Planes</a></li>
+                        <li><a href="#bookings" class="block p-2 rounded hover:bg-gray-700"> Bookings</a></li>
+                        <li><a href="#flight_logs" class="block p-2 rounded hover:bg-gray-700"> Flight Logs</a></li>
+                        <li><a href="#finances" class="block p-2 rounded hover:bg-gray-700"> Finances</a></li>
+                        <li><a href="#maintenance" class="block p-2 rounded hover:bg-gray-700"> Maintenance</a></li>
+                        <li><a href="#staff" class="block p-2 rounded hover:bg-gray-700"> Staff</a></li>
                         <!-- <li><a href="#schedule" class="block p-2 rounded hover:bg-gray-700">Schedule</a></li> -->
                     </ul>
                 </nav>
