--- a/maintenance.html
+++ b/maintenance.html
@@ -92,7 +92,9 @@
                 Attempting connection retry in <span id="countdown" class="text-cyan-400 font-bold">60</span> seconds.
             </p>
             <p class="text-gray-500 text-xs mt-1">
-                Do not close this window.
+                In case of prolonged downtime, please contact
+                <a href="mailto:ops.aerohandler@gmail.com">ops.aerohandler@gmail.com</a>
+
             </p>
         </div>
 
