--- a/forgot-password.html
+++ b/forgot-password.html
@@ -192,7 +192,7 @@
                 // e.g., {{ .SiteURL }}/update-password.html
 
                 const { data, error } = await supabase.auth.resetPasswordForEmail(email, {
-                    redirectTo: 'http://localhost:5500/update-password.html',
+                    redirectTo: 'https://aerohandler.vercel.app/update-password.html',
                 });
 
                 if (error) throw error;
