--- a/maintenance-control.html
+++ b/maintenance-control.html
@@ -14,7 +14,7 @@
             color: #e2e8f0;
         }
 
-        /* Simple spinner */
+
         .loader {
             border: 3px solid #f3f3f3;
             border-radius: 50%;
@@ -106,10 +106,10 @@
     </div>
 
     <script type="module">
-        // 1. Import the correctly configured client from your existing file
+
         import { supabase } from './js/supabase.js';
 
-        // DOM ELEMENTS
+
         const loginContainer = document.getElementById('login-container');
         const dashContainer = document.getElementById('dashboard-container');
         const loginForm = document.getElementById('login-form');
@@ -122,16 +122,16 @@
         const msgInput = document.getElementById('maintenance-msg');
         const feedback = document.getElementById('action-feedback');
 
-        // ERROR CHECK: Ensure supabase loaded
+
         if (!supabase) {
             alert("Error: Could not load Supabase client from ./js/supabase.js");
         }
 
-        // ==========================================
-        // EVENT LISTENERS
-        // ==========================================
 
-        // Login Submit
+
+
+
+
         loginForm.addEventListener('submit', async (e) => {
             e.preventDefault();
             const email = document.getElementById('email').value;
@@ -150,22 +150,22 @@
             }
         });
 
-        // Button Clicks (Attached via JS instead of HTML onclick for Module scope)
+
         btnEnable.addEventListener('click', () => setMaintenance(true));
         btnDisable.addEventListener('click', () => setMaintenance(false));
 
-        // Logout
+
         document.getElementById('logout-btn').addEventListener('click', async () => {
             await supabase.auth.signOut();
             location.reload();
         });
 
-        // ==========================================
-        // LOGIC
-        // ==========================================
+
+
+
 
         async function checkAdminPrivileges(userId) {
-            // Using the _get_my_clearance RPC
+
             const { data: level, error } = await supabase.schema('api').rpc('_get_my_clearance');
 
             if (error || level < 200) {
@@ -175,14 +175,14 @@
                 return;
             }
 
-            // Success: Show Dashboard
+
             loginContainer.classList.add('hidden');
             dashContainer.classList.remove('hidden');
             fetchSystemStatus();
         }
 
         async function fetchSystemStatus() {
-            // Using get_system_status RPC
+
             const { data, error } = await supabase.schema('api').rpc('get_system_status');
 
             if (error) {
@@ -191,8 +191,8 @@
                 return;
             }
 
-            // data is JSONB, handle structure
-            // depending on how SQL returns it, it might be data.maintenance_mode or just data
+
+
             const isModeOn = data.maintenance_mode === true;
             updateUI(isModeOn);
         }
@@ -204,7 +204,7 @@
                 statusBox.className = "mb-8 p-4 rounded-lg flex items-center justify-between bg-red-900/30 border border-red-700";
                 statusDot.className = "w-4 h-4 rounded-full bg-red-500 shadow-[0_0_10px_rgba(239,68,68,0.8)]";
 
-                // Toggle Buttons
+
                 btnEnable.disabled = true;
                 btnEnable.classList.add('opacity-50', 'cursor-not-allowed');
                 btnDisable.disabled = false;
@@ -215,7 +215,7 @@
                 statusBox.className = "mb-8 p-4 rounded-lg flex items-center justify-between bg-green-900/30 border border-green-700";
                 statusDot.className = "w-4 h-4 rounded-full bg-green-500 shadow-[0_0_10px_rgba(34,197,94,0.8)]";
 
-                // Toggle Buttons
+
                 btnEnable.disabled = false;
                 btnEnable.classList.remove('opacity-50', 'cursor-not-allowed');
                 btnDisable.disabled = true;
@@ -229,10 +229,10 @@
 
             const customMsg = msgInput.value.trim();
 
-            // Call the Secure RPC function
+
             const { data, error } = await supabase.schema('api').rpc('set_maintenance_mode', {
                 should_enable: enable,
-                message_text: customMsg // If empty, SQL handles the default
+                message_text: customMsg
             });
 
             if (error) {
@@ -243,12 +243,12 @@
                 feedback.innerText = enable ? "Locked down successfully." : "System is back online.";
                 feedback.className = "text-center text-sm font-bold mt-4 h-6 text-green-500";
                 updateUI(enable);
-                // Clear input if turning off
+
                 if (!enable) msgInput.value = "";
             }
         }
 
-        // Auto-login check
+
         (async () => {
             const { data: { session } } = await supabase.auth.getSession();
             if (session) {
