--- a/update-password.html
+++ b/update-password.html
@@ -146,16 +146,16 @@
     <script type="module">
         import { supabase } from "./js/supabase.js";
 
-        // 1. Check if user is actually recovering (Supabase puts a #access_token in URL)
-        // The Supabase client automatically detects the token in the URL hash and logs the user in.
-        // We just need to wait for that to happen.
+
+
+
 
         supabase.auth.onAuthStateChange(async (event, session) => {
             if (event === "PASSWORD_RECOVERY") {
-                // User is in recovery mode - allow them to stay on this page
+
                 console.log("Recovery session active");
             } else if (event === "SIGNED_OUT") {
-                // If they aren't signed in (invalid link), kick them out
+
                 window.location.href = "login.html";
             }
         });
@@ -171,31 +171,31 @@
             const password = document.getElementById("password").value;
             const confirmPassword = document.getElementById("confirm_password").value;
 
-            // Simple Validation
+
             if (password !== confirmPassword) {
                 feedbackMsg.textContent = "PASSWORDS DO NOT MATCH";
                 feedbackMsg.className = "text-center mt-6 p-3 rounded-lg border bg-red-900/20 border-red-800/30 text-red-400 font-orbitron text-sm block";
                 return;
             }
 
-            // UI Loading
+
             btnText.innerText = "UPDATING...";
             btn.classList.add("opacity-75");
 
             try {
-                // 2. Update the user's password
+
                 const { data, error } = await supabase.auth.updateUser({
                     password: password
                 });
 
                 if (error) throw error;
 
-                // 3. Success
+
                 feedbackMsg.textContent = "PASSWORD UPDATED SUCCESSFULLY. REDIRECTING...";
                 feedbackMsg.className = "text-center mt-6 p-3 rounded-lg border bg-green-900/20 border-green-800/30 text-green-400 font-orbitron text-sm block";
 
                 setTimeout(() => {
-                    window.location.href = "login.html"; // Or app.html if you prefer
+                    window.location.href = "login.html";
                 }, 2000);
 
             } catch (error) {
@@ -206,7 +206,7 @@
             }
         });
 
-        // Input styling fixes
+
         document.querySelectorAll('input').forEach(input => {
             input.addEventListener('mousedown', (e) => e.stopPropagation());
             input.addEventListener('click', (e) => { e.stopPropagation(); input.focus(); });
